<resources>
    <string name="app_name">FitPet</string>
    <string name="action_settings">Settings</string>
    <string name="start">시작하기</string>
    <string name="first_page">1/5</string>
    <string name="second_page">2/5</string>
    <string name="third_page">3/5</string>
    <string name="fourth_page">4/5</string>
    <string name="fifth_page">5/5</string>
    <string name="next">다음</string>
    <string name="underline_skip"><u>건너뛰기</u></string>
    <string name="dog">강아지</string>
    <string name="cat">고양이</string>
    <string name="camera">카메라</string>
    <string name="gallery">저장공간</string>
    <string name="notification">알림</string>
    <string name="agree">동의하기</string>
    <string name="agree_btn">동의합니다</string>
    <string name="go_to_mypet">펫보험 견적 알아보기</string>
    <string name="kakao_floating">바로 상담하기</string>
    <string name="resume">계속하기</string>
    <string name="blank" />
    <string name="select">선택하기</string>
    <string name="check_btn">확인했습니다</string>
    <string name="go_to_register">1:1 펫보험 상담하기</string>
    <string name="pet_info">%1$d살 | %2$s</string>
    <string name="pet_insurance_range"> ~ %s</string>
    <string name="question_mark">\?</string>
    <string name="slash">/</string>
    <string name="correct">정답이에요!</string>
    <string name="incorrect">아쉬워요!</string>
    <string name="close">닫기</string>
    <string name="Q">Q</string>
    <string name="db">DB손해보험</string>
    <string name="kb">KB손해보험</string>
    <string name="hyundai">현대해상</string>
    <string name="samsung">삼성화재</string>
    <string name="meritz">메리츠</string>
    <string name="tab_insurance">마이 펫보험</string>
    <string name="tab_life">반려생활</string>
    <string name="min_length_guide">1글자 이상 써주세요.</string>
    <string name="input_error">특수문자는 제외해야 해요.</string>
    <string name="onboarding1_title">갑작스러운 지출 대비</string>
    <string name="onboarding2_title">편리한 관리</string>
    <string name="onboarding3_title">풍부한 반려생활</string>
    <string name="onboarding1_content">예방접종, 진료비, 입원비, 수술비\n모두 맞춤형 보험으로 대비하세요</string>
    <string name="onboarding2_content">견적조회, 보험 상담, 보험 관리,\n보험금 청구를 한번에!</string>
    <string name="onboarding3_content">우리 아이와 오랫동안 행복할 수 있는 방법,\n반려생활에서 그 비법을 알려드릴게요</string>
    <string name="kakao_login_title">신뢰할 수 있는 보험 관리 플랫폼</string>
    <string name="kakao_login_content">우리 아이 건강을 위해\n한 발짝, 같이 내딛어 봐요</string>
    <string name="kakao_native_app_key">fb861916118bf9e4868e651607b605b0</string>
    <string name="kakao_scheme">kakaofb861916118bf9e4868e651607b605b0</string>
    <string name="kakao_login_text">카카오톡으로 시작하기</string>
    <string name="my_pet_registration">MY펫 등록</string>
    <string name="pet_name_registration">반려동물 이름을 입력해 주세요.</string>
    <string name="pet_name_input_hint">예) 홍길동</string>
    <string name="select_breed">품종을 선택해 주세요.</string>
    <string name="detail_breed_registration">상세 품종을 입력해 주세요.</string>
    <string name="detail_breed_dog_guide">헷갈리는 품종은 ‘믹스견’를 입력해 주세요.</string>
    <string name="detail_breed_cat_guide">헷갈리는 품종은 ‘믹스묘’를 입력해 주세요.</string>
    <string name="detail_breed_input_hint">예) 말티즈</string>
    <string name="detail_breed_input_hint_cat">예) 코리안숏헤어</string>
    <string name="birth_input_registration">출생년도는 언제인가요?</string>
    <string name="birth_input_hint">예) 2004</string>
    <string name="birth_input_guide">4자리 숫자로 써주세요.</string>
    <string name="birth_guide">잘 모르겠다면 추정하여 적어주세요.</string>
    <string name="invalid_birth_year_title">보험 조건에 맞지 않아요</string>
    <string name="invalid_birth_year_due_to_age">11살 이상으로는 현재 보험 가입이\n어려워요! 더 많은 아이들이 건강을\n보장 받을 수 있도록 계속 노력할게요</string>
    <string name="invalid_birth_year_future_year">아직 태어나지 않은 반려가족은\n펫보험 등록이 불가능해요!\n건강하게 자라길 기다릴게요</string>
    <string name="contact_info_input_registration">연락처를 입력해 주세요.</string>
    <string name="contact_info_input_hint">예) 010 1234 5678</string>
    <string name="contact_info_input_guide">안심하세요! 전화번호를 입력하더라도\n견적받기 용도 외에는 사용되거나 유출되지 않아요.</string>
    <string name="insurance_no_pet_box1">우리 아이, 갑자기 아프면 어떡하지?...</string>
    <string name="insurance_no_pet_box2">마이펫을 등록하고 보험 견적을 확인해 보세요!</string>
    <string name="insurance_no_pet_info_box1">스마트커버인슈어런스에서는 긴 보험 관리 과정을 <font color="#FF008CFF"> 하나로 통합</font>했어요</string>
    <string name="insurance_no_pet_info_box2">견적 조회만, 가입상담만 하지 않습니다! \n보험관리에 필요한 모든 절차를 SC가 책임질게요</string>
    <string name="insurance_no_pet_bottom">[ 필수안내사항 ]\n
        ※ 보험대리점 : 스마트커버 인슈어런스(주) \n
        \u0020\u0020협회등록번호 : 제2023120019호\n
        ※ 본 광고는 광고심의기준을 준수하였으며,\n
        \u0020\u0020유효기간은 심의일로부터 1년입니다.\n
        ※ 보험계약자가 기존 보험계약을 해지하고 새로운 보험계약을\n
        \u0020\u0020체결하는 과정에서\n
        \u0020\u0020① 질병이력, 연령증가 등으로 가입이 거절되거나 보험료가\n
        \u0020\u0020\u0020\u0020인상될 수 있습니다.\n
        \u0020\u0020② 가입 상품에 따라 새로운 면책기간 적용 및 보장 제한 등\n
        \u0020\u0020\u0020\u0020기타 불이익이 발생할 수 있습니다.\n
        준법심의필 제2024-07-0011호 (2024.07.26 ~ 2025.07.26)
</string>
    <string name="insurance_no_register_pet_box1">우리 아이 보험료는?</string>
    <string name="insurance_no_register_pet_box2">2분 안에 받아보는 예상 보험료</string>
    <string name="insurance_no_register_pet_box_won">원</string>
    <string name="insurance_no_register_insurance_nothing">해당 범위로는 알맞는 상품이 보이지 않아요! \n보상범위를 다시 설정해 보시겠어요?</string>
    <string name="insurance_no_register_insurance_title">에게 알맞는 보험</string>
    <string name="insurance_no_register_insurance_range">보상범위</string>
    <string name="insurance_no_register_percent_70">70%</string>
    <string name="insurance_no_register_percent_80">80%</string>
    <string name="insurance_no_register_percent_90">90%</string>
    <string name="insurance_main_month_title">월 납입보험료</string>
    <string name="insurance_main_blue_title1">자세한 설명을 듣고 싶어요</string>
    <string name="insurance_main_blue_title2">상담사 연결하기</string>
    <string name="insurance_main_charge_title">보험금 \n청구</string>
    <string name="insurance_main_check_title">보상내역 \n확인</string>
    <string name="insurance_main_see">자세히 보기</string>
    <string name="recommend_insurance_toolbar">보험추천</string>
    <string name="recommend_insurance_btn">보험 가입하기</string>
    <string name="dialog_mypet_title">나의 반려가족들</string>
    <string name="add_new_pet_title">새로운 가족 등록하기</string>
    <string name="add_new_pet_title_space">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020새로운 가족 등록하기</string>
    <string name="add_new_pet_title2">반려가족</string>
    <string name="edit_my_pet_title">정보 수정하기</string>
    <string name="permission_title">서비스 이용을 위해\n접근 권한에 동의해 주세요</string>
    <string name="camera_content">보험금 청구 시 사진 촬영</string>
    <string name="gallery_content">보험금 청구 시 사진 첨부</string>
    <string name="notification_content">중요 메시지 수신</string>
    <string name="revoke_access_permission">접근권한 철회 방법</string>
    <string name="access_permission_revoke_path">설정 > 개인(신용)정보보호 > 해당 접근권한 > 접근권한 철회</string>
    <string name="take_photo">사진 찍기</string>
    <string name="photo_gallery">사진 보관함</string>
    <string name="insurance_charge">보험금 청구</string>
    <string name="insurance_charge_cause_title">어떤 이유로 보험금을\n청구하나요?</string>
    <string name="insurance_charge_cause_injury">통원</string>
    <string name="insurance_charge_cause_hospital">입원/수술</string>
    <string name="insurance_charge_cause_etc">기타</string>
    <string name="insurance_charge_cause_date_title">병원방문일</string>
    <string name="insurance_charge_date_sun">일</string>
    <string name="insurance_charge_date_mon">월</string>
    <string name="insurance_charge_date_tues">화</string>
    <string name="insurance_charge_date_wed">수</string>
    <string name="insurance_charge_date_thurs">목</string>
    <string name="insurance_charge_date_fri">금</string>
    <string name="insurance_charge_date_sat">토</string>
    <string name="insurance_charge_document_title">서류를 등록해주세요</string>
    <string name="insurance_charge_document_receipt_type">RECEIPT_PHOTO</string>
    <string name="insurance_charge_document_detail_type">DETAIL_PHOTO</string>
    <string name="insurance_charge_document_etc_type">ETC_PHOTO</string>
    <string name="insurance_charge_document_receipt_title">1. 병원 진료비 영수증 [필수]</string>
    <string name="insurance_charge_document_detail_title">2. 진료비 세부내역서 [필수]</string>
    <string name="insurance_charge_document_etc_title">3. 기타 서류(진단서, 수술기록지, 처방전 등)[선택]</string>
    <string name="insurance_charge_document_notice_title">[ 필수안내사항 ]</string>
    <string name="insurance_charge_document_info">- 서류 파일은 jpg, jpeg, png, pdf 확장자만 업로드 가능합니다.\n- 파일당 15MB를 초과할 수 없으며, 최대 30개까지 업로드 가능합니다.\n- 진료비 납입확인서와 카드매출전표는 진료내역이 자세히 확인 되지 않아 보험금 청구 서류로 등록할 수 없습니다</string>
    <string name="camera_photo_date_format">yyMMdd_HHmmss</string>
    <string name="img_file_format">image/jpg</string>
    <string name="img_file_name">img_%s.jpg</string>
    <string name="jpg_format">.jpg</string>
    <string name="file_provider_suffix">.fileprovider</string>
    <string name="jpeg_format">JPEG_</string>
    <string name="file_provider_format">%1$s.fileprovider</string>
    <string name="file_name_format">JPEG_%1$s_</string>
    <string name="gallery_file_format">image/*</string>
    <string name="gallery_phone_build">Xiaomi</string>
    <string name="insurance_charge_account_title">보험금을 지급 받을 계좌를\n입력해 주세요</string>
    <string name="insurance_charge_account_owner">* 예금주</string>
    <string name="insurance_charge_account_number">* 보험금 수령계좌</string>
    <string name="insurance_charge_account">은행</string>
    <string name="insurance_charge_account_notice_title">확인해주세요</string>
    <string name="insurance_charge_account_notice">입력한 계좌로 보험금 지급이 불가한 경우 확인을 위해\n보상 담당자에게 연락이 올 수 있어요.</string>
    <string name="insurance_charge_account_number_hint">-없이 입력해주세요</string>
    <string name="insurance_charge_account_owner_type">ACCOUNT_OWNER</string>
    <string name="insurance_charge_account_number_type">ACCOUNT_NUMBER</string>
    <string name="stop_registration_title">등록을 멈추고 싶으신가요?</string>
    <string name="stop_registration_content">지금 등록하시면 보험 견적까지\n한 번에 받아볼 수 있어요!</string>
    <string name="not_save_title">정보가 저장되지 않아요.</string>
    <string name="not_save_content">작성하던 모든 기록은 지워지며,\n이후 복구는 불가능해요.\n정말 저장하지 않고 나가시겠어요?</string>
    <string name="not_save_btn">머무르기</string>
    <string name="save_title">정보가 성공적으로 저장되었어요!</string>
    <string name="save_content">새로운 정보가 확인되었어요.\n건강하고 행복한 반려생활, 함께해요</string>
    <string name="save_btn">확인했어요</string>
    <string name="delete_title">정말 정보를 지우시겠어요?</string>
    <string name="delete_content">작성하던 모든 기록은 지워지며\n이후 복구는 불가능해요.</string>
    <string name="delete_btn">지우기</string>
    <string name="insurance_charge_contact_title">안내 받을 연락 수단을\n모두 선택해 주세요</string>
    <string name="insurance_charge_contact_kakao">카카오톡</string>
    <string name="insurance_charge_contact_email">이메일</string>
    <string name="insurance_charge_contact_both">알림톡/이메일</string>
    <string name="insurance_charge_contact_talk">알림톡</string>
    <string name="insurance_charge_contact_email_hint">예) Hongildong@hanmail.com</string>
    <string name="method_kakao">KAKAO</string>
    <string name="method_email">EMAIL</string>
    <string name="insurance_agree_all">전체 동의</string>
    <string name="insurance_agree_essential">[필수] 개인(신용)정보 조회, 수집•이용 및 제공 동의</string>
    <string name="insurance_agree_choice">[선택] 의료기관 진료비 이상여부 확인을 위한 개인(신용)정보 동의</string>
    <string name="insurance_agree_type_all">ALL</string>
    <string name="insurance_agree_type_essential">TYPE_ESSENTIAL</string>
    <string name="insurance_agree_type_choice">TYPE_CHOICE</string>
    <string name="btn_get_new_quote">새 견적 받아보기</string>
    <string name="get_new_quote_content">어디가 아픈지 말 못 하는 우리 아이,\n미리 대비해 주는 건 어때요?</string>
    <string name="my_pet_health_plus">우리 아이 건강 플러스</string>
    <string name="my_pet_hospital_record">우리 아이 병원일지</string>
    <string name="my_pet_hospital_record_detail">더보기</string>
    <string name="quiz_title">재미 쏙쏙 지식퀴즈</string>
    <string name="quiz_content">깜짝 지식 퀴즈</string>
    <string name="O">O</string>
    <string name="X">X</string>
    <string name="question">궁금해요</string>
</resources>