<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="com.example.fitpet.model.domain.PetType"/>
        <variable
            name="vm"
            type="com.example.fitpet.ui.registration.petBreed.PetBreedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white">

        <include
            android:id="@+id/top_bar"
            layout="@layout/top_bar"/>

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:layout_marginHorizontal="28dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/top_bar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_page"
                android:textAppearance="@style/b3"
                android:textColor="@color/point_blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/select_breed"
                android:textAppearance="@style/b1_S"
                android:textColor="@color/black"/>

        </LinearLayout>
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDog"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="16dp"
            android:stateListAnimator="@null"
            android:text="@string/dog"
            android:onClick="@{() -> vm.onClickBtnBreed(PetType.DOG)}"
            android:textColor="@{vm.uiState.breed == PetType.DOG ? @color/text_white : @color/text_body }"
            android:textAppearance="@style/b3_S"
            android:background="@{vm.uiState.breed == PetType.DOG ? @drawable/bg_rectangle_filled_point_blue_radius_50 : @drawable/bg_rectangle_filled_bg_primary_radius_50}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnCat"
            app:layout_constraintTop_toBottomOf="@id/topLayout"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCat"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="28dp"
            android:stateListAnimator="@null"
            android:text="@string/cat"
            android:onClick="@{() -> vm.onClickBtnBreed(PetType.CAT)}"
            android:textColor="@{vm.uiState.breed == PetType.CAT ? @color/text_white : @color/text_body }"
            android:textAppearance="@style/b3_S"
            android:background="@{vm.uiState.breed == PetType.CAT ? @drawable/bg_rectangle_filled_point_blue_radius_50 : @drawable/bg_rectangle_filled_bg_primary_radius_50}"
            app:layout_constraintStart_toEndOf="@id/btnDog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topLayout"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginBottom="78dp"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:textAppearance="@style/b2_S"
            android:textColor="@color/text_white"
            android:background="@drawable/bg_rectangle_filled_point_blue_radius_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/underline_skip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>