<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.fitpet.ui.registration.contactInfo.ContactInfoInputViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white">

        <include
            android:id="@+id/top_bar"
            layout="@layout/top_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:layout_marginHorizontal="28dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/top_bar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_page"
                android:textAppearance="@style/b4"
                android:textColor="@color/point_blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/contact_info_input_registration"
                android:textAppearance="@style/b1_S"
                android:textColor="@color/black"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/bg_rectangle_filled_bg_primary_radius_8">

                <EditText
                    android:id="@+id/contactInfoEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:paddingHorizontal="24dp"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:inputType="number"
                    android:maxLength="13"
                    android:text="@{vm.uiState.contactInfo}"
                    android:textAppearance="@style/b3"
                    android:hint="@string/contact_info_input_hint"
                    tools:ignore="LabelFor" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_rectangle_filled_bg_light_blue_radius_8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/contact_info_input_guide"
                    android:textColor="@color/text_point"
                    android:textAppearance="@style/b5_S"/>

            </FrameLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="28dp"
            android:layout_marginBottom="76dp"
            android:background="@{!vm.uiState.isMaxLength ? @drawable/bg_rectangle_filled_bg_primary_radius_8 : @drawable/bg_rectangle_filled_point_blue_radius_8}"
            android:clickable="@{vm.uiState.isMaxLength}"
            android:onClick="@{() -> vm.onClickBtnNext()}"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:textAppearance="@style/b3_S"
            android:textColor="@{vm.uiState.contactInfo.empty ? @color/text_disable : @color/text_white}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/underline_skip"
            android:onClick="@{()->vm.onClickSkip()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>